^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Since v0.13 most of the Synnefo components have been merged into a single
repository and have aligned versions.


.. _Changelog-0.13next:

v0.13next
=========

Released: UNRELEASED

Synnefo-wide
------------
* Create 'snf_django' Python package to hold common code for all Synnefo
  components.

Astakos
-------

Cyclades
--------

Pithos
------
* Remove PITHOS_AUTHENTICATION_USERS setting, which was used to override
  astakos users.

Tools
-----


.. _Changelog-0.13:

v0.13
=====

Released: Wed Apr 10 18:52:50 EEST 2013

In v0.13 the code was very heavily refactored for increased uniformity since
most of the Synnefo components have been merged into a single repository. Thus,
**just for this version** we will not document a complete Changelog (features,
fixes, improvements, issues, setting changes), but rather just copy from the
`NEWS` file with minor additions wherever needed.

Synnefo-wide
------------

* Support for pooling throughout Synnefo

  * Pooled Django DB connections, Pithos backend connections, HTTP
    connections using single `objpool` package

* Improved management commands

  * Unified codebase for output of tables in JSON, CSV

* Bring most of Synnefo code inside a single, unified repository

  * support automatic Python and Debian package builds for individual commits
  * with automatic version generation

* Overhauling of Synnefo settings: renames and refactoring, for increased
  uniformity (in progress)
* Deployment: Standardize on gunicorn, with gevent-based workers
  and use of Green threads throughout Synnefo
* Documentation: New scale-out guide, with distinct node roles,
  for mass Synnefo deployments

Astakos
-------

* Support multiple authentication methods

  * Classic (username/password), Shibboleth, LDAP/Active Directory,
    Google, Twitter, LinkedIn
  * Users can enable/disable auth methods, and switch between them
